# arecibo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  Dockerfile.grafana  Dockerfile.transponder  README.md  agent.py  docker-compose.yml  instructions-to-add-agent.md  instructions-to-add-transponder.md  openapi.yml
.github/workflows/: build_and_push.yml
agent/: README.md  cea_agent.py  entrypoint.sh  pyproject.toml
agent/src/arecibo_agent/: __init__.py  client.py  config.py  ingest.py  main.py  model.py  runtime.py  utils.py
agent/tests/: test_runtime.py
api/: README.md  requirements.txt
api/src/: __init__.py  app.py  auth.py  config.py  logging_json.py  policy_store.py  query_routes.py  schemas.py  telemetry_reader.py  telemetry_retention.py  telemetry_store.py  vault_client.py
api/tests/: conftest.py  test_auth.py  test_go_dark.py  test_ingest.py  test_policy.py  test_query_endpoints.py  test_telemetry_retention.py  (+1 more)
grafana/: README.md
prompts/: arecibo-api-first-bootstrap.json  arecibo-grafana-webcomponent-observability.json  arecibo-homelab-infra-rollout.json  arecibo-transponder-rust-port-one-swoop.json  immigration-visa-transponder-entrypoint-durability.json
transponder/: Cargo.toml  README.md  build.rs  cea_transponder.py  entrypoint.sh  pyproject.toml
transponder/src/: client.rs  config.rs  ingest.rs  main.rs  metrics.rs  model.rs  runtime.rs  utils.rs
transponder/src/arecibo_transponder/: __init__.py  config.py  ingest.py  main.py  model.py  runtime.py
transponder/tests/: test_config.py  test_runtime.py
(+36 files in other folders)
