[project]
name = "arecibo-agent"
version = "0.1.0"
description = "Contrived Embedded Agent runtime component."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
cea-agent = "arecibo_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arecibo_agent"]
