[package]
name = "arecibo-transponder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transponder"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
ctrlc = "3"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
