[project]
name = "arecibo-transponder"
version = "0.1.0"
description = "Contrived Embedded Transponder runtime component."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
cea-transponder = "arecibo_transponder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arecibo_transponder"]
